reports/exploring.log
Traceback (most recent call last):
  File "d:\ubc\university\geeringup\jupyter book\.venv\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "d:\ubc\university\geeringup\jupyter book\.venv\lib\site-packages\nbclient\client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "d:\ubc\university\geeringup\jupyter book\.venv\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "d:\ubc\university\geeringup\jupyter book\.venv\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\ana\appdata\local\programs\python\python37\lib\asyncio\base_events.py", line 568, in run_until_complete
    return future.result()
  File "d:\ubc\university\geeringup\jupyter book\.venv\lib\site-packages\nbclient\client.py", line 554, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "d:\ubc\university\geeringup\jupyter book\.venv\lib\site-packages\nbclient\client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "d:\ubc\university\geeringup\jupyter book\.venv\lib\site-packages\nbclient\client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# Exploring Further

In this section we've collected a few different ideas for projects that you could pursue for tomorrow. With any project, you should relate your idea to a real world problem and how quantum technologies might be helpful. Note that your idea doesn't have to be totally realistic - try to incorporate something you've learned this week, but otherwise have fun with it!
 You'll pitch your idea in a "Dragon's Den" type scenario, with your camp leaders and a special guest acting as the "Dragons". 

Some of your options are:

- Explore the games in [Quantum Hub](http://quantum-hub.herokuapp.com/app/sudoku), which make use of a real quantum device known as a quantum annealer. 
- Create an animation in Scratch, explaining a quantum idea and how it could be useful. 
- Propose a new video game, maybe inspired by the quantum navigator game you played at the start of the week.
- Explore some of the exciting ideas in quantum technology that we haven't explored in the camp, and tell us how they could be used to solve a real world problem. 

In the next few sections we'll explore how you can get started on these projects in more detail. Note that you don't need to read each section in detail - just pick one you'd like to do with your group and go from there!
------------------

[1;36m  File [1;32m"<ipython-input-1-0db727e887ad>"[1;36m, line [1;32m3[0m
[1;33m    In this section we've collected a few different ideas for projects that you could pursue for tomorrow. With any project, you should relate your idea to a real world problem and how quantum technologies might be helpful. Note that your idea doesn't have to be totally realistic - try to incorporate something you've learned this week, but otherwise have fun with it![0m
[1;37m          ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-0db727e887ad>, line 3)

